--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,86 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-color {
+  background: #000428; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #004e92,
+    #000428
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #004e92,
+    #000428
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mdl-layout__header .mdl-layout__drawer-button {
+  background-color: transparent !important;
 }
-
-.App-header {
-  background-color: #282c34;
+.landing-container {
+  background-color: #3a42de;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%231ebacc' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23903f3f' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%2304a5d5' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%238b0d25' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%232186c0' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23bc2156' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%231c61a0' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23ac1461' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23674fb5' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%23450232' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23bd3cbd' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23580e58' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.avatar-image{
+  height: 250px;
+  padding-top: 5em;
+  
+}
+.banner-text{
+  background-color: black;
+  opacity: .8;
+  width: 75%;
+  margin: auto;
+  border-radius: 10px;
+  
+}
+
+.banner-text h1{
   color: white;
+  font-family: 'Lobster', cursive;
+  font-size: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.banner-text hr{
+  border-top: dotted white;
+  margin: auto;
+  width: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.banner-text p{
+  color: white;
+  font-size: 20px;
+  padding: 1em;
+
 }
+
+.social-links{
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin: auto;
+}
+
+.social-links i{
+  color: white;
+  font-size: 4.5em;
+  padding: 8px;
+  transition: all 0.30s ease;
+}
+
+.social-links i:hover{
+  color: #3a42de;  
+  font-size: 4.5em;
+  padding: 8px;
+}
+
