--- a/src/App.css
+++ b/src/App.css
@@ -32,65 +32,62 @@
   width: 100%;
 }
 
-.avatar-image{
+.avatar-image {
   height: 250px;
   padding-top: 5em;
-  
 }
-.banner-text{
+.banner-text {
   background-color: black;
-  opacity: .8;
+  opacity: 0.8;
   width: 75%;
   margin: auto;
   border-radius: 10px;
-  
 }
 
-.banner-text h1{
+.banner-text h1 {
   color: white;
-  font-family: 'Lobster', cursive;
+  font-family: "Lobster", cursive;
   font-size: 50px;
 }
 
-.banner-text hr{
+.banner-text hr {
   border-top: dotted white;
   margin: auto;
   width: 50%;
 }
 
-.banner-text p{
+.banner-text p {
   color: white;
   font-size: 20px;
   padding: 1em;
-
 }
 
-.social-links{
+.social-links {
   display: flex;
   justify-content: space-between;
   width: 50%;
   margin: auto;
 }
 
-.social-links i{
+.social-links i {
   color: white;
   font-size: 4.5em;
   padding: 8px;
-  transition: all 0.30s ease;
+  transition: all 0.3s ease;
 }
 
-.social-links i:hover{
-  color: #3a42de;  
+.social-links i:hover {
+  color: #3a42de;
   font-size: 4.5em;
   padding: 8px;
 }
 
-.projects-container{
+.projects-container {
   display: flex;
   margin-top: 2rem;
   flex-wrap: wrap;
 }
-.projects-grid{
+.projects-grid {
   background-color: #3a42de;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%231ebacc' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23903f3f' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%2304a5d5' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%238b0d25' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%232186c0' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23bc2156' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%231c61a0' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23ac1461' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23674fb5' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%23450232' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23bd3cbd' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%23580e58' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
   background-attachment: fixed;
@@ -98,4 +95,32 @@
   min-height: 87vh;
   height: 100%;
   width: 100%;
+}
+
+.contact-body {
+  background-color: #000000;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg fill-opacity='0.9'%3E%3Cpolygon fill='%2312132a' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%23242655' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%2337387f' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%23494baa' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%235b5ed4' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  margin: auto;
+  justify-content: center;
+  padding-top: 8em;
+}
+
+.contact-grid{
+  text-align: center;
+  justify-content: center;
+  width: 80%;
+  height: 550px;
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+  opacity: .7;
+  margin-bottom: 20px;
 }
